# Fall_Detection_AI

./: README.md  app.py  main.py  pyproject.toml  sound.py
assets/: test.m4a
src/: obj.py  track.py
static/: index.html  script.js  styles.css
templates/: index.html
