[project]
name = "physaio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "sounddevice>=0.5.2",
    "flask>=3.0.0",
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
]
